// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transformMarkdownWithSolid > discovers nested, expression, and fragment islands from the MDX AST 1`] = `
"
import { onCleanup, onMount } from 'solid-js';
import { render } from 'solid-js/web';
import { initIslands, readIslandSlotHtml } from '@ox-content/islands';
import Callout from '../src/components/Callout.tsx';
import Badge from '../src/components/Badge.tsx';

export const frontmatter = {};

const rawHtml = "<div class=\\"ox-island\\" data-ox-island=\\"Callout\\"><h1 id=\\"title\\">Title</h1>\\n<div class=\\"ox-island\\" data-ox-island=\\"Badge\\" data-ox-props=\\"{&quot;expressions&quot;:{},&quot;props&quot;:{&quot;title&quot;:&quot;hi&quot;},&quot;spreads&quot;:[]}\\"><script type=\\"application/json\\">{\\"expressions\\":{},\\"props\\":{\\"title\\":\\"hi\\"},\\"spreads\\":[]}</script></div>\\n</div>\\n";
const components = {
  Callout,
  Badge,
};

function createSolidHydrate() {
  return (element, props) => {
    const componentName = element.dataset.oxIsland;
    const Component = components[componentName];
    if (!Component) return;

    // Read the slot content before clearing: the island element still holds the
    // markup the Markdown transform left behind.
    const islandContent = readIslandSlotHtml(element);
    element.innerHTML = '';

    const dispose = render(
      () =>
        islandContent
          ? <Component {...props}><div innerHTML={islandContent} /></Component>
          : <Component {...props} />,
      element,
    );

    return () => dispose();
  };
}

export default function MarkdownContent() {
  let container;

  onMount(() => {
    if (!container) return;
    const controller = initIslands(createSolidHydrate(), {
      selector: '.ox-content [data-ox-island]',
    });
    onCleanup(() => controller.destroy());
  });

  return <div class="ox-content" ref={container} innerHTML={rawHtml} />;
}
"
`;

exports[`transformMarkdownWithSolid > discovers nested, expression, and fragment islands from the MDX AST 2`] = `
"
import { onCleanup, onMount } from 'solid-js';
import { render } from 'solid-js/web';
import { initIslands, readIslandSlotHtml } from '@ox-content/islands';
import Alert from '../src/components/Alert.tsx';

export const frontmatter = {};

const rawHtml = "<div class=\\"ox-island\\" data-ox-island=\\"Alert\\" data-ox-props=\\"{&quot;expressions&quot;:{&quot;count&quot;:&quot;count + 1&quot;,&quot;title&quot;:&quot;foo&quot;},&quot;props&quot;:{},&quot;spreads&quot;:[]}\\"><script type=\\"application/json\\">{\\"expressions\\":{\\"count\\":\\"count + 1\\",\\"title\\":\\"foo\\"},\\"props\\":{},\\"spreads\\":[]}</script></div>\\n";
const components = {
  Alert,
};

function createSolidHydrate() {
  return (element, props) => {
    const componentName = element.dataset.oxIsland;
    const Component = components[componentName];
    if (!Component) return;

    // Read the slot content before clearing: the island element still holds the
    // markup the Markdown transform left behind.
    const islandContent = readIslandSlotHtml(element);
    element.innerHTML = '';

    const dispose = render(
      () =>
        islandContent
          ? <Component {...props}><div innerHTML={islandContent} /></Component>
          : <Component {...props} />,
      element,
    );

    return () => dispose();
  };
}

export default function MarkdownContent() {
  let container;

  onMount(() => {
    if (!container) return;
    const controller = initIslands(createSolidHydrate(), {
      selector: '.ox-content [data-ox-island]',
    });
    onCleanup(() => controller.destroy());
  });

  return <div class="ox-content" ref={container} innerHTML={rawHtml} />;
}
"
`;

exports[`transformMarkdownWithSolid > discovers nested, expression, and fragment islands from the MDX AST 3`] = `
"
import { onCleanup, onMount } from 'solid-js';
import { render } from 'solid-js/web';
import { initIslands, readIslandSlotHtml } from '@ox-content/islands';
import Alert from '../src/components/Alert.tsx';

export const frontmatter = {};

const rawHtml = "<div class=\\"ox-island\\" data-ox-island=\\"Alert\\" data-ox-props=\\"{&quot;expressions&quot;:{},&quot;props&quot;:{&quot;tone&quot;:&quot;info&quot;},&quot;spreads&quot;:[]}\\"><script type=\\"application/json\\">{\\"expressions\\":{},\\"props\\":{\\"tone\\":\\"info\\"},\\"spreads\\":[]}</script></div>\\n";
const components = {
  Alert,
};

function createSolidHydrate() {
  return (element, props) => {
    const componentName = element.dataset.oxIsland;
    const Component = components[componentName];
    if (!Component) return;

    // Read the slot content before clearing: the island element still holds the
    // markup the Markdown transform left behind.
    const islandContent = readIslandSlotHtml(element);
    element.innerHTML = '';

    const dispose = render(
      () =>
        islandContent
          ? <Component {...props}><div innerHTML={islandContent} /></Component>
          : <Component {...props} />,
      element,
    );

    return () => dispose();
  };
}

export default function MarkdownContent() {
  let container;

  onMount(() => {
    if (!container) return;
    const controller = initIslands(createSolidHydrate(), {
      selector: '.ox-content [data-ox-island]',
    });
    onCleanup(() => controller.destroy());
  });

  return <div class="ox-content" ref={container} innerHTML={rawHtml} />;
}
"
`;

exports[`transformMarkdownWithSolid > honors disabled built-in embeds from framework options 1`] = `
"
export const frontmatter = {};

const rawHtml = "<github repo=\\"ubugeeei-prod/ox-content\\"></github>\\n";

export default function MarkdownContent() {
  return <div class="ox-content" innerHTML={rawHtml} />;
}
"
`;

exports[`transformMarkdownWithSolid > turns registered components into islands and leaves fenced tags literal 1`] = `
"
import { onCleanup, onMount } from 'solid-js';
import { render } from 'solid-js/web';
import { initIslands, readIslandSlotHtml } from '@ox-content/islands';
import Alert from '../src/components/Alert.tsx';

export const frontmatter = {"title":"Solid Guide","draft":false};

const rawHtml = "<h1 id=\\"solid-guide\\">Solid Guide</h1>\\n<div data-ox-island=\\"Alert\\" data-ox-props='{\\"tone\\":\\"info\\",\\"active\\":true}' data-ox-content='Read **docs**.'></div>\\n<pre><code class=\\"language-tsx\\">&lt;Alert tone=&quot;code&quot; /&gt;\\n</code></pre>\\n";
const components = {
  Alert,
};

function createSolidHydrate() {
  return (element, props) => {
    const componentName = element.dataset.oxIsland;
    const Component = components[componentName];
    if (!Component) return;

    // Read the slot content before clearing: the island element still holds the
    // markup the Markdown transform left behind.
    const islandContent = readIslandSlotHtml(element);
    element.innerHTML = '';

    const dispose = render(
      () =>
        islandContent
          ? <Component {...props}><div innerHTML={islandContent} /></Component>
          : <Component {...props} />,
      element,
    );

    return () => dispose();
  };
}

export default function MarkdownContent() {
  let container;

  onMount(() => {
    if (!container) return;
    const controller = initIslands(createSolidHydrate(), {
      selector: '.ox-content [data-ox-island]',
    });
    onCleanup(() => controller.destroy());
  });

  return <div class="ox-content" ref={container} innerHTML={rawHtml} />;
}
"
`;

exports[`transformMarkdownWithSolid > uses the static html path when no registered component is present 1`] = `
"
export const frontmatter = {};

const rawHtml = "<h1 id=\\"plain\\">Plain</h1>\\n<Unknown />\\n";

export default function MarkdownContent() {
  return <div class="ox-content" innerHTML={rawHtml} />;
}
"
`;
